--- a/configs/x86_aeroplage_defconfig
+++ b/configs/x86_aeroplage_defconfig
@@ -193,7 +193,7 @@ CONFIG_CAMKES_PROFILER_NONE=y
 #
 # Toolchain Options
 #
-CONFIG_CROSS_COMPILER_PREFIX="i686-pc-linux-gnu-"
+CONFIG_CROSS_COMPILER_PREFIX=""
 CONFIG_KERNEL_COMPILER=""
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
