--- a/Kconfig
+++ b/Kconfig
@@ -32,6 +32,7 @@ menu "Libraries"
     source "libs/libsel4vspace/Kconfig"
     source "libs/libsel4vka/Kconfig"
     source "libs/libplatsupport/Kconfig"
+    source "libs/libsel4dma/Kconfig"
     source "libs/libsel4debug/Kconfig"
     source "libs/libutils/Kconfig"
     source "libs/libsel4simple/Kconfig"
@@ -43,15 +44,20 @@ menu "Applications"
     source "apps/uart/Kconfig"
     source "apps/epit/Kconfig"
     source "apps/keyboard/Kconfig"
+    source "apps/dma-example/Kconfig"
+    source "apps/DARPA/Kconfig"
 
     menu "Examples"
         source "apps/simple/Kconfig"
         source "apps/dataport/Kconfig"
         source "apps/event/Kconfig"
+        source "apps/eventnative/Kconfig"
         source "apps/filter/Kconfig"
         source "apps/terminal/Kconfig"
         source "apps/mutex/Kconfig"
         source "apps/lockserver/Kconfig"
+        source "apps/prodcons/Kconfig"
+        source "apps/oneplacebuffer/Kconfig"
         source "apps/multiclient/Kconfig"
     endmenu
 
@@ -60,6 +66,8 @@ menu "Applications"
         source "apps/adder/Kconfig"
         source "apps/socket/Kconfig"
         source "apps/multiplier/Kconfig"
+        source "apps/testrpcthreadsafe/Kconfig"
+        source "apps/testrpccall/Kconfig"
         source "apps/exchangestring/Kconfig"
     endmenu
 endmenu
