--- a/Kconfig
+++ b/Kconfig
@@ -41,6 +41,7 @@ menu "Libraries"
     source "libs/libsel4simple/Kconfig"
     source "libs/libsel4simple-default/Kconfig"
     source "libs/libsel4bga/Kconfig"
+    source "libs/libredis/Kconfig"
 endmenu
 
 menu "Applications"
