Update redis default config file.

--- a/configs/arm_redis_defconfig
+++ b/configs/arm_redis_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # CAmkES project configuration
-# Mon Jan 13 11:35:36 2014
+# Wed Aug 27 18:48:42 2014
 #
 
 #
@@ -27,15 +27,17 @@ CONFIG_PLAT_IMX6=y
 #
 # seL4 System Parameters
 #
-CONFIG_ROOT_CNODE_SIZE_BITS=18
+CONFIG_ROOT_CNODE_SIZE_BITS=20
 CONFIG_TIMER_TICK_MS=2
 CONFIG_TIME_SLICE=5
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
-CONFIG_MAX_WORK_UNITS_PER_PREEMPTION=100
-CONFIG_FLUSH_WORK_UNIT=4096
-CONFIG_MAX_NUM_BOOTINFO_DEVICE_REGIONS=200
+CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
+CONFIG_MAX_NUM_BOOTINFO_DEVICE_REGIONS=199
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=167
 CONFIG_FASTPATH=y
+CONFIG_NUM_DOMAINS=1
+CONFIG_DOMAIN_SCHEDULE=""
+CONFIG_NUM_PRIORITIES=256
 # CONFIG_BENCHMARK is not set
 CONFIG_AEP_BINDING=y
 # CONFIG_ALLOW_NULL_CSPACE is not set
@@ -44,6 +46,7 @@ CONFIG_AEP_BINDING=y
 # Build Options
 #
 CONFIG_DEBUG_BUILD=y
+CONFIG_IRQ_REPORTING=y
 # CONFIG_OPTIMISATION_Os is not set
 # CONFIG_OPTIMISATION_O0 is not set
 # CONFIG_OPTIMISATION_O1 is not set
@@ -51,6 +54,7 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 # CONFIG_DANGEROUS_CODE_INJECTION is not set
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
+# CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
 
 #
 # Errata
@@ -63,12 +67,15 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_LIB_MUSL_C_USE_PREBUILT=y
 CONFIG_HAVE_LIBC=y
 CONFIG_LIB_SEL4=y
+# CONFIG_LIB_SEL4_STUBS_USE_IPC_BUFFER_ONLY is not set
 CONFIG_LIB_SEL4_MUSLC_SYS=y
 CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=1048576
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK=y
-# CONFIG_LIB_SEL4_MUSLC_CAMKES is not set
+CONFIG_LIB_SEL4_MUSLC_CAMKES=y
+CONFIG_LIB_SEL4_MUSLC_CAMKES_MORECORE_BYTES=5242880
+# CONFIG_LIB_SEL4_MUSLC_CAMKES_CPIO_FS is not set
 CONFIG_LIB_SEL4_PLAT_SUPPORT=y
 CONFIG_LIB_SEL4_PLAT_SUPPORT_USE_SEL4_DEBUG_PUTCHAR=y
 CONFIG_LIB_SEL4_PLAT_SUPPORT_START=y
@@ -76,9 +83,8 @@ CONFIG_LIB_SEL4_UTILS=y
 CONFIG_SEL4UTILS_STACK_SIZE=16384
 CONFIG_SEL4UTILS_CSPACE_SIZE_BITS=12
 CONFIG_LIB_CPIO=y
-CONFIG_LIB_SEL4_ELF=y
+CONFIG_LIB_ELF=y
 # CONFIG_LIB_SEL4_BENCH is not set
-CONFIG_LIB_SEL4_CAMKES=y
 CONFIG_LIB_SEL4_SYNC=y
 CONFIG_LIB_SEL4_VSPACE=y
 CONFIG_LIB_SEL4_VKA=y
@@ -86,22 +92,23 @@ CONFIG_LIB_SEL4_VKA=y
 CONFIG_LIB_SEL4_VKA_DEBUG_LIVE_SLOTS_SZ=0
 CONFIG_LIB_SEL4_VKA_DEBUG_LIVE_OBJS_SZ=0
 CONFIG_LIB_ETHIF=y
-CONFIG_LIB_ETHDRIVER_ZERO_COPY_RX=y
+# CONFIG_LIB_ETHDRIVER_ZERO_COPY_RX is not set
+CONFIG_LIB_ETHDRIVER_RX_DESC_COUNT=32
+CONFIG_LIB_ETHDRIVER_TX_DESC_COUNT=32
 CONFIG_LIB_LWIP=y
 CONFIG_LIB_LWIP_SOCKETS=y
 CONFIG_LIB_PLATSUPPORT=y
-CONFIG_LIB_SDHC=y
+# CONFIG_LIB_SDHC is not set
 CONFIG_LIB_SEL4_DMA=y
-# CONFIG_LIB_QB50_UTILS is not set
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
-# CONFIG_LIB_QB50_I2C is not set
 CONFIG_LIB_UTILS=y
+# CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
 CONFIG_LIB_SEL4_SIMPLE=y
 CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
+# CONFIG_LIB_SEL4_BGA is not set
 CONFIG_LIB_REDIS=y
-CONFIG_LIB_REDIS_SYS=y
-CONFIG_LIB_EPIT=y
+CONFIG_LIB_REDIS_RELEASE="2.8.13"
 
 #
 # Applications
@@ -110,13 +117,13 @@ CONFIG_MODULE_CAPDL_LOADER=y
 # CONFIG_CAPDL_LOADER_VERIFIED is not set
 CONFIG_CAPDL_LOADER_CC_STANDARD=y
 # CONFIG_CAPDL_LOADER_CC_REGISTERS is not set
-CONFIG_CAPDL_LOADER_MAX_OBJECTS=20000
+CONFIG_CAPDL_LOADER_MAX_OBJECTS=30000
 CONFIG_CAPDL_LOADER_MAX_IRQS=256
 # CONFIG_CAPDL_LOADER_ALLOW_NO_CSPACE is not set
-# CONFIG_CAPDL_LOADER_GALOIS_DOMAINS is not set
-CONFIG_CAPDL_LOADER_PRINT_DEVICE_INFO=y
-CONFIG_CAPDL_LOADER_PRINT_UNTYPEDS=y
+# CONFIG_CAPDL_LOADER_PRINT_DEVICE_INFO is not set
+# CONFIG_CAPDL_LOADER_PRINT_UNTYPEDS is not set
 # CONFIG_CAPDL_LOAD_PRINT_CAPDL_OBJECTS is not set
+# CONFIG_CAPDL_LOADER_PRINTF is not set
 # CONFIG_APP_UART is not set
 # CONFIG_APP_UARTSABRE is not set
 # CONFIG_APP_EPIT is not set
@@ -124,7 +131,6 @@ CONFIG_CAPDL_LOADER_PRINT_UNTYPEDS=y
 # CONFIG_APP_DMAEGFLAT is not set
 # CONFIG_APP_SMARTMETER is not set
 # CONFIG_APP_DARPA is not set
-# CONFIG_APP_QB50 is not set
 # CONFIG_APP_FILESYSTEM is not set
 # CONFIG_APP_MICROBENCH is not set
 CONFIG_APP_REDIS=y
@@ -134,13 +140,18 @@ CONFIG_APP_REDIS_SAFE_STACK_SIZE=65536
 # CONFIG_APP_REDIS_DEBUG_VERBOSE is not set
 # CONFIG_APP_REDIS_PROFILE is not set
 CONFIG_APP_REDIS_NETWORK_MODULE_MEMORY=10000000
+# CONFIG_APP_ULTTERMINAL is not set
+# CONFIG_APP_AEROPLAGE is not set
+# CONFIG_APP_BILBYFS is not set
 
 #
 # Examples
 #
 # CONFIG_APP_SIMPLE is not set
+# CONFIG_APP_SIMPLEVERIFICATION is not set
 # CONFIG_APP_DATAPORT is not set
 # CONFIG_APP_EVENT is not set
+# CONFIG_APP_EVENTNATIVE is not set
 # CONFIG_APP_FILTER is not set
 # CONFIG_APP_TERMINAL is not set
 # CONFIG_APP_MUTEX is not set
@@ -168,7 +179,7 @@ CONFIG_APP_REDIS_NETWORK_MODULE_MEMORY=10000000
 # CAmkES Options
 #
 CONFIG_CAMKES_DEFAULT_STACK_SIZE=16384
-CONFIG_CAMKES_USE_EXTERNAL_OBJDUMP=y
+# CONFIG_CAMKES_USE_EXTERNAL_OBJDUMP is not set
 # CONFIG_CAMKES_CACHE_OFF is not set
 CONFIG_CAMKES_CACHE_READWRITE=y
 # CONFIG_CAMKES_CACHE_READONLY is not set
@@ -176,12 +187,34 @@ CONFIG_CAMKES_CACHE_READWRITE=y
 # CONFIG_CAMKES_CPP is not set
 # CONFIG_CAMKES_DEBUG_MALLOC is not set
 # CONFIG_CAMKES_DEBUG_POST_RENDER_EDIT is not set
-CONFIG_CAMKES_SYSLIB="redissys"
+CONFIG_CAMKES_SYSLIB="sel4muslccamkes"
+CONFIG_CAMKES_OPTIMISATION_RPC_LOCK_ELISION=y
+CONFIG_CAMKES_OPTIMISATION_CALL_LEAVE_REPLY_CAP=y
+CONFIG_CAMKES_OPTIMISATION_SPECIALISE_SYSCALL_STUBS=y
+CONFIG_CAMKES_PROVIDE_TCB_CAPS=y
+CONFIG_CAMKES_SUPPORT_INIT=y
+# CONFIG_CAMKES_THYS is not set
+# CONFIG_CAMKES_CONNECTOR_TIMING is not set
+# CONFIG_CAMKES_USE_LARGEFRAME is not set
+CONFIG_CAMKES_DEFAULT_PRIORITY=254
+CONFIG_CAMKES_PROFILER_NONE=y
+# CONFIG_CAMKES_PROFILER_INTERNAL is not set
+# CONFIG_CAMKES_PROFILER_NATIVE is not set
+# CONFIG_CAMKES_PROFILER_AGGREGATE is not set
+# CONFIG_CAMKES_PROFILER_HEARTBEAT is not set
+# CONFIG_CAMKES_PYTHON_OPTIMIZE is not set
+# CONFIG_CAMKES_PLY_OPTIMIZE is not set
+# CONFIG_CAMKES_DISABLE_PYTHON_IMPORT_CHECKS is not set
+CONFIG_CAMKES_PYTHON_INTERPRETER_CPYTHON=y
+# CONFIG_CAMKES_PYTHON_INTERPRETER_PYPY is not set
+# CONFIG_CAMKES_PYTHON_INTERPRETER_FIGLEAF is not set
+# CONFIG_CAMKES_PYTHON_INTERPRETER_COVERAGE is not set
+# CONFIG_CAMKES_LABEL_MAPPING is not set
 
 #
 # Toolchain Options
 #
-CONFIG_CROSS_COMPILER_PREFIX="arm-none-eabi-"
+CONFIG_CROSS_COMPILER_PREFIX="arm-linux-gnueabi-"
 CONFIG_KERNEL_COMPILER=""
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
@@ -199,4 +232,5 @@ CONFIG_USER_OPTIMISATION_O2=y
 # CONFIG_LINK_TIME_OPTIMISATIONS is not set
 # CONFIG_WHOLE_PROGRAM_OPTIMISATIONS_USER is not set
 # CONFIG_WHOLE_PROGRAM_OPTIMISATIONS_KERNEL is not set
+CONFIG_USER_DEBUG_BUILD=y
 # CONFIG_BUILDSYS_CPP_SEPARATE is not set
