Kconfig: Add libsel4simple-stable.
Requires changes from pull request #1 in camkes-manifest for the project to
build successfully.

--- a/Kconfig
+++ b/Kconfig
@@ -39,6 +39,7 @@ menu "Libraries"
     source "libs/libsel4debug/Kconfig"
     source "libs/libutils/Kconfig"
     source "libs/libsel4simple/Kconfig"
+    source "libs/libsel4simple-stable/Kconfig"
     source "libs/libsel4simple-default/Kconfig"
     source "libs/libsel4bga/Kconfig"
     source "libs/libredis/Kconfig"
