--- a/configs/arm_simpleverification_defconfig
+++ b/configs/arm_simpleverification_defconfig
@@ -188,7 +188,7 @@ CONFIG_CAMKES_OPTIMISATION_SPECIALISE_SYSCALL_STUBS=y
 CONFIG_CAMKES_PROVIDE_TCB_CAPS=y
 CONFIG_CAMKES_SUPPORT_INIT=y
 CONFIG_CAMKES_PRUNE_GENERATED=y
-CONFIG_CAMKES_LLVM_PATH="/opt/llvm-r207601"
+CONFIG_CAMKES_LLVM_PATH="/opt/clang"
 CONFIG_CAMKES_THYS=y
 # CONFIG_CAMKES_CONNECTOR_TIMING is not set
 # CONFIG_CAMKES_USE_LARGEFRAME is not set
