--- a/Kconfig
+++ b/Kconfig
@@ -46,7 +46,9 @@ menu "Applications"
     source "apps/keyboard/Kconfig"
     source "apps/dma-example/Kconfig"
     source "apps/DARPA/Kconfig"
-    source "apps/timer/Kconfig"
+    source "apps/timer_kzm/Kconfig"
+    source "apps/timer_sabre/Kconfig"
+    source "apps/timer_odroid/Kconfig"
 
     menu "Examples"
         source "apps/simple/Kconfig"
