--- a/configs/sabre_timer_defconfig
+++ b/configs/sabre_timer_defconfig
@@ -1,26 +1,35 @@
 #
 # Automatically generated make config: don't edit
 # CAmkES project configuration
-# Wed May  6 16:26:21 2015
+# Wed May  6 16:27:43 2015
 #
 
 #
 # Kernel
 #
-CONFIG_ARCH_ARM_V6=y
-# CONFIG_ARCH_ARM_V7A is not set
+# CONFIG_ARCH_ARM_V6 is not set
+CONFIG_ARCH_ARM_V7A=y
 
 #
 # seL4 System
 #
 # CONFIG_ARCH_I386 is not set
 CONFIG_ARCH_ARM=y
-CONFIG_ARM1136JF_S=y
+# CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A8 is not set
-# CONFIG_ARM_CORTEX_A9 is not set
+CONFIG_ARM_CORTEX_A9=y
 # CONFIG_ARM_CORTEX_A15 is not set
 # CONFIG_PLAT_EXYNOS54XX is not set
-CONFIG_PLAT_KZM=y
+# CONFIG_PLAT_KZM is not set
+# CONFIG_PLAT_EXYNOS4 is not set
+# CONFIG_PLAT_EXYNOS5410 is not set
+# CONFIG_PLAT_EXYNOS5422 is not set
+# CONFIG_PLAT_EXYNOS5250 is not set
+# CONFIG_PLAT_APQ8064 is not set
+CONFIG_PLAT_IMX6=y
+# CONFIG_PLAT_ZYNQ7000 is not set
+# CONFIG_PLAT_ALLWINNERA20 is not set
+# CONFIG_EXPORT_PMU_USER is not set
 
 #
 # seL4 System Parameters
@@ -49,7 +58,6 @@ CONFIG_IRQ_REPORTING=y
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 # CONFIG_DANGEROUS_CODE_INJECTION is not set
-# CONFIG_DANGEROUS_CODE_INJECTION_ON_UNDEF_INSTR is not set
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
 
@@ -118,8 +126,8 @@ CONFIG_CAPDL_LOADER_MAX_IRQS=256
 # CONFIG_APP_EPIT is not set
 # CONFIG_APP_DMAEG is not set
 # CONFIG_APP_DARPA is not set
-CONFIG_APP_TIMER_KZM=y
-# CONFIG_APP_TIMER_SABRE is not set
+# CONFIG_APP_TIMER_KZM is not set
+CONFIG_APP_TIMER_SABRE=y
 # CONFIG_APP_TIMER_ODROID is not set
 
 #
